tests/fsharp/typecheck/sigs/neg28.bsl

neg28.fsx(5,10,5,11): typecheck error FS1180: The struct, record or union type 'X' has the 'StructuralEquality' attribute but the component type '(int -> int)' does not satisfy the 'equality' constraint

neg28.fsx(12,13,12,14): typecheck error FS0880: Uninitialized 'val' fields must be mutable and marked with the '[<DefaultValue>]' attribute. Consider using a 'let' binding instead of a 'val' field.

neg28.fsx(19,13,19,14): typecheck error FS1181: Each argument of the primary constructor for a struct must be given a type, for example 'type S(x1:int, x2: int) = ...'. These arguments determine the fields of the struct.

neg28.fsx(33,14,33,18): typecheck error FS0688: The default, zero-initializing constructor of a struct type may only be used if all the fields of the struct type admit default initialization

neg28.fsx(58,17,58,33): typecheck error FS0001: The type 'System.Type' does not support the 'comparison' constraint. For example, it does not support the 'System.IComparable' interface

neg28.fsx(59,17,59,37): typecheck error FS0001: The type 'System.Type' does not support the 'comparison' constraint. For example, it does not support the 'System.IComparable' interface

neg28.fsx(61,40,61,41): typecheck error FS0001: The type '(int -> int)' does not support the 'equality' constraint because it is a function type

neg28.fsx(62,42,62,43): typecheck error FS0001: The type '(int -> int)' does not support the 'equality' constraint because it is a function type

neg28.fsx(63,46,63,47): typecheck error FS0001: The type '(int -> int)' does not support the 'equality' constraint because it is a function type

neg28.fsx(64,50,64,51): typecheck error FS0001: The type '(int -> int)' does not support the 'equality' constraint because it is a function type

neg28.fsx(65,54,65,55): typecheck error FS0001: The type '(int -> int)' does not support the 'equality' constraint because it is a function type

neg28.fsx(66,58,66,59): typecheck error FS0001: The type '(int -> int)' does not support the 'equality' constraint because it is a function type

neg28.fsx(67,62,67,63): typecheck error FS0001: The type '(int -> int)' does not support the 'equality' constraint because it is a function type

neg28.fsx(68,66,68,67): typecheck error FS0001: The type '(int -> int)' does not support the 'equality' constraint because it is a function type

neg28.fsx(69,39,69,40): typecheck error FS0001: The type '(int -> int)' does not support the 'equality' constraint because it is a function type

neg28.fsx(70,17,70,34): typecheck error FS0001: The type '(int -> int)' does not support the 'comparison' constraint. For example, it does not support the 'System.IComparable' interface

neg28.fsx(71,17,71,38): typecheck error FS0001: The type '(int -> int)' does not support the 'comparison' constraint. For example, it does not support the 'System.IComparable' interface

neg28.fsx(79,17,79,39): typecheck error FS0001: The type 'System.Type' does not support the 'comparison' constraint. For example, it does not support the 'System.IComparable' interface

neg28.fsx(80,17,80,41): typecheck error FS0001: The type 'System.Type' does not support the 'comparison' constraint. For example, it does not support the 'System.IComparable' interface

neg28.fsx(81,17,81,38): typecheck error FS0001: The type 'System.Type' does not support the 'comparison' constraint. For example, it does not support the 'System.IComparable' interface

neg28.fsx(82,21,82,37): typecheck error FS0001: The type 'System.Type' does not support the 'comparison' constraint. For example, it does not support the 'System.IComparable' interface

neg28.fsx(83,21,83,41): typecheck error FS0001: The type 'System.Type' does not support the 'comparison' constraint. For example, it does not support the 'System.IComparable' interface

neg28.fsx(97,17,97,36): typecheck error FS0001: The type 'System.Type' does not support the 'comparison' constraint. For example, it does not support the 'System.IComparable' interface

neg28.fsx(100,35,100,36): typecheck error FS0001: The type '(int -> int)' does not support the 'equality' constraint because it is a function type

neg28.fsx(108,17,108,36): typecheck error FS0001: The type 'System.Type' does not support the 'comparison' constraint. For example, it does not support the 'System.IComparable' interface

neg28.fsx(110,35,110,36): typecheck error FS0001: The type '(int -> int)' does not support the 'equality' constraint because it is a function type

neg28.fsx(112,41,112,42): typecheck error FS0001: The type '(int -> int)' does not support the 'equality' constraint because it is a function type

neg28.fsx(119,17,119,36): typecheck error FS0001: The type 'System.Type' does not support the 'comparison' constraint. For example, it does not support the 'System.IComparable' interface

neg28.fsx(121,35,121,36): typecheck error FS0001: The type '(int -> int)' does not support the 'equality' constraint because it is a function type

neg28.fsx(123,41,123,42): typecheck error FS0001: The type '(int -> int)' does not support the 'equality' constraint because it is a function type

neg28.fsx(130,17,130,36): typecheck error FS0001: The type 'System.Type' does not support the 'comparison' constraint. For example, it does not support the 'System.IComparable' interface

neg28.fsx(132,35,132,36): typecheck error FS0001: The type '(int -> int)' does not support the 'equality' constraint because it is a function type

neg28.fsx(134,41,134,42): typecheck error FS0001: The type '(int -> int)' does not support the 'equality' constraint because it is a function type

neg28.fsx(142,17,142,36): typecheck error FS0001: The type 'System.Type' does not support the 'comparison' constraint. For example, it does not support the 'System.IComparable' interface

neg28.fsx(144,35,144,36): typecheck error FS0001: The type '(int -> int)' does not support the 'equality' constraint because it is a function type

neg28.fsx(146,41,146,42): typecheck error FS0001: The type '(int -> int)' does not support the 'equality' constraint because it is a function type

neg28.fsx(154,17,154,36): typecheck error FS0001: The type 'System.Type' does not support the 'comparison' constraint. For example, it does not support the 'System.IComparable' interface

neg28.fsx(156,35,156,36): typecheck error FS0001: The type '(int -> int)' does not support the 'equality' constraint because it is a function type

neg28.fsx(158,41,158,42): typecheck error FS0001: The type '(int -> int)' does not support the 'equality' constraint because it is a function type

neg28.fsx(165,17,165,36): typecheck error FS0001: The type 'System.Type' does not support the 'comparison' constraint. For example, it does not support the 'System.IComparable' interface

neg28.fsx(166,17,166,42): typecheck error FS0001: The type 'System.Type' does not support the 'comparison' constraint. For example, it does not support the 'System.IComparable' interface

neg28.fsx(169,35,169,36): typecheck error FS0001: The type '(int -> int)' does not support the 'equality' constraint because it is a function type

neg28.fsx(171,41,171,42): typecheck error FS0001: The type '(int -> int)' does not support the 'equality' constraint because it is a function type

neg28.fsx(180,17,180,36): typecheck error FS0001: The type 'System.Type' does not support the 'comparison' constraint. For example, it does not support the 'System.IComparable' interface

neg28.fsx(181,17,181,42): typecheck error FS0001: The type 'System.Type' does not support the 'comparison' constraint. For example, it does not support the 'System.IComparable' interface

neg28.fsx(184,35,184,36): typecheck error FS0001: The type '(int -> int)' does not support the 'equality' constraint because it is a function type

neg28.fsx(186,41,186,42): typecheck error FS0001: The type '(int -> int)' does not support the 'equality' constraint because it is a function type

neg28.fsx(194,17,194,36): typecheck error FS0001: The type 'System.Type' does not support the 'comparison' constraint. For example, it does not support the 'System.IComparable' interface

neg28.fsx(195,17,195,42): typecheck error FS0001: The type 'System.Type' does not support the 'comparison' constraint. For example, it does not support the 'System.IComparable' interface

neg28.fsx(198,35,198,36): typecheck error FS0001: The type '(int -> int)' does not support the 'equality' constraint because it is a function type

neg28.fsx(200,41,200,42): typecheck error FS0001: The type '(int -> int)' does not support the 'equality' constraint because it is a function type

neg28.fsx(204,17,204,36): typecheck error FS0001: The type 'System.Type' does not support the 'comparison' constraint. For example, it does not support the 'System.IComparable' interface

neg28.fsx(205,17,205,42): typecheck error FS0001: The type 'System.Type' does not support the 'comparison' constraint. For example, it does not support the 'System.IComparable' interface

neg28.fsx(208,35,208,36): typecheck error FS0001: The type '(int -> int)' does not support the 'equality' constraint because it is a function type

neg28.fsx(210,41,210,42): typecheck error FS0001: The type '(int -> int)' does not support the 'equality' constraint because it is a function type

neg28.fsx(252,17,252,40): typecheck error FS0001: The type 'System.Type' does not support the 'comparison' constraint. For example, it does not support the 'System.IComparable' interface

neg28.fsx(253,17,253,46): typecheck error FS0001: The type 'System.Type' does not support the 'comparison' constraint. For example, it does not support the 'System.IComparable' interface

neg28.fsx(256,42,256,43): typecheck error FS0001: The type '(int -> int)' does not support the 'equality' constraint because it is a function type

neg28.fsx(258,48,258,49): typecheck error FS0001: The type '(int -> int)' does not support the 'equality' constraint because it is a function type

neg28.fsx(272,17,272,23): typecheck error FS0001: The type 'X' does not support the 'comparison' constraint because it is a record, union or struct with one or more structural element types which do not support the 'comparison' constraint. Either avoid the use of comparison with this type, or add the 'StructuralComparison' attribute to the type to determine which field type does not support comparison

neg28.fsx(273,17,273,23): typecheck error FS0001: The type 'Y' does not support the 'comparison' constraint because it is a record, union or struct with one or more structural element types which do not support the 'comparison' constraint. Either avoid the use of comparison with this type, or add the 'StructuralComparison' attribute to the type to determine which field type does not support comparison

neg28.fsx(275,23,275,24): typecheck error FS0001: The type 'X' does not support the 'equality' constraint because it is a record, union or struct with one or more structural element types which do not support the 'equality' constraint. Either avoid the use of equality with this type, or add the 'StructuralEquality' attribute to the type to determine which field type does not support equality

neg28.fsx(276,23,276,24): typecheck error FS0001: The type 'Y' does not support the 'equality' constraint because it is a record, union or struct with one or more structural element types which do not support the 'equality' constraint. Either avoid the use of equality with this type, or add the 'StructuralEquality' attribute to the type to determine which field type does not support equality

neg28.fsx(284,17,284,23): typecheck error FS0001: The type 'X' does not support the 'comparison' constraint because it is a record, union or struct with one or more structural element types which do not support the 'comparison' constraint. Either avoid the use of comparison with this type, or add the 'StructuralComparison' attribute to the type to determine which field type does not support comparison

neg28.fsx(285,17,285,23): typecheck error FS0001: The type 'Y' does not support the 'comparison' constraint because it is a record, union or struct with one or more structural element types which do not support the 'comparison' constraint. Either avoid the use of comparison with this type, or add the 'StructuralComparison' attribute to the type to determine which field type does not support comparison
